OSM/yamls/bookbuyer.yaml

# Create bookbuyer Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookbuyer
  namespace: bookbuyer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookbuyer
      version: v1
  template:
    metadata:
      labels:
        app: bookbuyer
        version: v1
    spec:
      serviceAccountName: bookbuyer
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
        agentpool: akssyspool
      containers:
        - name: bookbuyer
          image: openservicemesh/bookbuyer:v0.11.1
          imagePullPolicy: Always
          command: ["/bookbuyer"]
