OSM/yamls/osm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osm-ingress
  namespace: bookstore
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  # - hosts:
  #   - store.<dns-name>
  #   secretName: osm-tls-secret
  rules:
  - host: store.<dns-name>
    http:
      paths:
      - path: /store
        pathType: Prefix
        backend:
          service:
            name: bookstore
            port:
              number: 14001
