OSM/yamls/osm-system-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osm-system-ingress
  namespace: osm-system
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - "*.internal.<dns-name>"
    secretName: osm-tls-secret
  rules:
  - host: grafana.internal.<dns-name>
    http:
      paths:      
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: osm-grafana
            port:
              number: 3000
